# autoragos

./: .gitignore
Documents/infinite-ops/infinite-ops-venv/: pyvenv.cfg
IdeaProjects/psta_mangrudr/Rudra_PSTA/: settings.gradle
backend/: main.py  requirements.txt
backend/services/: gemini_client.py
client/src/pages/: Chat.tsx  (+1 more)
swasth parivarai /: README.md  pyproject.toml
swasth parivarai /api/: deps.py  dosha_detector.py  grocery_category_generate.py  grocery_generate.py  health_check.py  meal_plan_generate.py  recipe_generate.py
swasth parivarai /app/: app.py  lifespan.py
swasth parivarai /config/: config.py  features.yml  model_map.yml  setting.yml
swasth parivarai /data/: dosha_guidelines.json  grocery_categories.json  regions.json
swasth parivarai /db/: grocery_repo.py  meal_plan_repo.py  mongo.py  prakriti_repo.py  recipe_repo.py  rotation_repo.py
swasth parivarai /domain/grocery/: models.py  service.py  validators.py
swasth parivarai /domain/meal/: grocery_aggregators.py  models.py  service.py  validators.py  variety.py
swasth parivarai /domain/prakriti/: models.py  service.py  validators.py
swasth parivarai /domain/recipe/: models.py  service.py  validators.py
swasth parivarai /llm/: client.py  model_router.py  prompt_renderer.py  schema_registry.py  tasks.py
swasth parivarai /prompts/: grocery.j2  meal_plan.j2  prakriti.j2  recipe.j2
swasth parivarai /schemas/: auth_log.json  grocery_list.json  meal_plan_family.json  otp.json  prakriti_assessment.json  rate_limit.json  recipe.json  refresh_token.json  session.json  user.json
(+10 files in other folders)
