[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swasth-backend"
version = "0.1.0"
description = "Backend for meal planning, grocery lists, recipes, and prakriti assessment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "jinja2>=3.1",
  "openai>=1.40",
  "cachetools>=5.3",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "anyio>=4.4",
]

[tool.uvicorn]
factory = true
host = "0.0.0.0"
port = 8000
reload = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"